tests/error/linear_errors/continue_unused.err
Error: Drop violation (at $FILE:26:8)
   | 
24 |     b = False
25 |     while i > 0:
26 |         q = new_qubit()
   |         ^ Variable `q` with non-droppable type `qubit` may be leaked
   |           ...
   | 
27 |         if i % 10 == 0:
   |            ----------- if this expression is `True`

Help: Make sure that `q` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
